--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
     <title>My Portfolio | Kedai Bagelen Rizky</title>
@@ -16,7 +19,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-info shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-info shadow-sm fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Kedai Bagelen Rizky</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +27,7 @@
         </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="">Home</a>
                     <a class="nav-link" href="#about">About</a>
                     <a class="nav-link" href="#Menu">Menu</a>
                     <a class="nav-link" href="#contact">Contact</a>
@@ -58,10 +61,10 @@
             </div>
             <div class="row justify-content-center fs-5 text-center">
                 <div class="col-md-4">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit perspiciatis quidem cum nam nesciunt explicabo provident, veritatis ullam error totam!</p>
+                    <p>Restaurant has been around since 2014 </p>
                 </div>
                 <div class="col-md-4">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non ipsa illum tempora nam reiciendis provident doloribus quae error ratione rerum, asperiores dolor ipsum. Maiores, at.</p>
+                    <p>the restaurant sells various kinds of food with typical bagelen preparations</p>
                 </div>
             </div>
         </div>
@@ -160,7 +163,7 @@
                                 <label for="pesan" class="form-label">Pesan</label>
                                 <textarea class="form-control" id="pesan" rows="3"></textarea>
                             </div>
-                            <button type="submit" class="btn btn-primary">Kirim</button>
+                            <button type="submit" class="btn btn-primary"><i class="bi bi-instagram"></i> Kirim</button>
                     </form>
                     </div>
                 </div>
@@ -169,8 +172,8 @@
     <!-- Akhir Contact -->
     <!-- Footer -->
     <div class="col-md-12"><svg xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 1440 320"><path fill="#0dcaf0" fill-opacity="1" d="M0,160L48,154.7C96,149,192,139,288,122.7C384,107,480,85,576,106.7C672,128,768,192,864,197.3C960,203,1056,149,1152,138.7C1248,128,1344,160,1392,176L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg></div>
-    <footer class="bg-info text-white text-center p-5 col-md-12">
-        <p>Created with love by <a href="https://www.instagram.com/kedaibagelenrizky/" class="text-white fw-bold">Kedai Bagelen Rizky</a></p>
+    <footer class="bg-info text-white text-center pb-5 col-md-12">
+        <p>Created with <i class="bi bi-instagram text-danger"> </i> <a href="https://www.instagram.com/kedaibagelenrizky/" class="text-white fw-bold">Kedai Bagelen Rizky</a></p>
     </footer>
     <!-- Akhir Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
